[package]
name = "soundcloud"
authors = ["Mikkel Kroman <mk@uplink.io>"]
version = "0.1.0"
license = "MIT/Apache-2.0"
keywords = ["soundcloud", "http", "api", "client"]
repository = "https://github.com/mkroman/soundcloud"
description = "SoundCloud API implementation in Rust"
documentation = "https://mkroman.github.io/soundcloud/"
edition = "2018"

[dependencies]
env_logger = "0.3.3"
futures = "0.1"
http = "0.1"
hyper = "0.13"
hyper-tls = "0.4"
log = "0.3.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio-core = "0.1"
url = "1"

